--- a/index.html
+++ b/index.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2">
+                    <div class="content">
+
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class="content">
+
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="content">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="d-flex">
+        <div class="sidebar">
+            <div class="sidebar-top">
+                <div class="content">
+                    <ul class="">
+                        <li>
+                            <i class="fas fa-house"></i>
+                            <span class=" va-middle">Home</span>  
+                        </li>
+                        <li>
+                            <i class="fas fa-chart-simple"></i>
+                            <span class=" va-middle">Stats</span> 
+                        </li>
+                        <li>
+                            <i class="fas fa-signal"></i>
+                            <span class=" va-middle">Signal</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sidebar-bottom">
+
+            </div>
+        </div>
+
+
+        <div class="main-content">
+            <div class="main-content-top">
+
+            </div>
+            <div class="main-content-bottom">
+
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
